--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,14 @@ android:
   - android-27                    # 타겟 버전
   - extra-android-m2repository    # 안드로이드 라이브러리
 
+  licenses:
+    # white list all the licenses
+    - '.+'
+
 before_install:
   - chmod +x gradlew
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
+  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
 
 script: ./gradlew build
